fixed codeblocks overflowing chat

--- a/public/style.css
+++ b/public/style.css
@@ -121,6 +121,7 @@ code {
     border-radius: 5px;
     background-color: var(--black70a);
     display: inline-block;
+    max-width: calc(100% - 10px);
 }
 
 #bg1 {
